# code-research

./: README.md
duckdb-chatbot/: README.md  chatbot.py  duckdb_manager.py  example.py  example_csv.py  notes.md  pyproject.toml  python_executor.py  requirements.txt  sample_data.csv  test_basic.py
github-commit-history-summarizer/: .env.example  .gitignore  README.md  claude.md  config.example.yaml  pyproject.toml
github-commit-history-summarizer/config_files/: bioc-nci.config.yaml  cmgd_config.yaml
github-commit-history-summarizer/src/commit_summarizer/: __init__.py  cache.py  cli.py  config.py  gemini_client.py  github_client.py  summarizer.py
linkml-schema-manager/: .gitignore  README.md  example_schema.yaml  pyproject.toml
linkml-schema-manager/app/: config.py  database.py  main.py  models.py  schemas.py
linkml-schema-manager/app/routers/: codegen.py  schemas.py  validation.py
linkml-schema-manager/app/services/: codegen_service.py  schema_service.py  validation_service.py
linkml-schema-manager/app/utils/: logging_middleware.py
